--- a/index.html
+++ b/index.html
@@ -5,74 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>더현대 서울 팝업 라이브</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: sans-serif; background-color: #f8f9fa; }
-        .carousel { display: flex; overflow-x: auto; scroll-snap-type: x mandatory; scrollbar-width: none; }
+        body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; -webkit-tap-highlight-color: transparent; }
+        .carousel { display: flex; overflow-x: auto; scroll-snap-type: x mandatory; -ms-overflow-style: none; scrollbar-width: none; }
         .carousel::-webkit-scrollbar { display: none; }
-        .card { flex: 0 0 85%; scroll-snap-align: center; margin-right: 15px; background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .tag-live { background: #ef4444; color: white; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: bold; }
-        .active-floor { border-bottom: 3px solid #059669; color: #059669 !important; }
+        .card { flex: 0 0 85%; scroll-snap-align: center; margin-right: 16px; }
+        @media (min-width: 768px) { .card { flex: 0 0 320px; } }
+        .tag-live { background: #ef4444; color: #fff; padding: 3px 10px; border-radius: 6px; font-size: 11px; font-weight: 800; animation: pulse 2s infinite; }
+        .tag-upcoming { background: #3b82f6; color: #fff; padding: 3px 10px; border-radius: 6px; font-size: 11px; font-weight: 800; }
+        .tag-ended { background: #94a3b8; color: #fff; padding: 3px 10px; border-radius: 6px; font-size: 11px; font-weight: 800; }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.7; } 100% { opacity: 1; } }
+        .active-floor { color: #059669 !important; border-bottom: 3px solid #059669; }
     </style>
 </head>
-<body class="pb-20">
+<body class="pb-24">
 
-    <header class="p-6 bg-white sticky top-0 z-20 shadow-sm">
-        <h1 class="text-xl font-black italic">THE HYUNDAI <span class="text-emerald-600 font-black">POP-UP</span></h1>
+    <header class="p-6 bg-white sticky top-0 z-20 shadow-sm flex justify-between items-center">
+        <div>
+            <h1 class="text-xl font-black italic tracking-tighter">THE HYUNDAI <span class="text-emerald-600">POP-UP</span></h1>
+            <p id="today-display" class="text-[10px] text-gray-400 font-bold mt-1 uppercase tracking-wider"></p>
+        </div>
     </header>
 
-    <main id="app" class="p-4 space-y-10">
-        <div id="loading" class="text-center py-20 text-gray-400">데이터를 연결 중입니다...</div>
+    <main id="app" class="p-4 space-y-12">
+        <div id="loading" class="py-20 text-center text-gray-400 font-medium italic">데이터를 연결 중입니다...</div>
     </main>
 
-    <nav class="fixed bottom-0 left-0 right-0 bg-white border-t flex justify-around items-center h-16 z-30">
-        <a href="#B2" class="floor-link text-gray-400 font-bold">B2</a>
-        <a href="#1F" class="floor-link text-gray-400 font-bold">1F</a>
-        <a href="#5F" class="floor-link text-gray-400 font-bold">5F</a>
+    <nav class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-100 flex justify-around items-center h-16 z-30 px-4">
+        <a href="#B2" class="floor-link text-gray-400 text-sm font-black py-2">B2</a>
+        <a href="#1F" class="floor-link text-gray-400 text-sm font-black py-2">1F</a>
+        <a href="#5F" class="floor-link text-gray-400 text-sm font-black py-2">5F</a>
     </nav>
 
     <script>
-        // 엑셀 주소 강제 변환 (OneDrive 직접 다운로드용)
         const excelUrl = "https://onedrive.live.com/download?resid=6DC17DD437B292AF!205844&authkey=!AAL-v6OYWyn-ER4";
 
         async function init() {
+            const now = new Date(); now.setHours(0,0,0,0);
+            document.getElementById('today-display').innerText = now.toLocaleDateString();
+
             try {
-                const res = await fetch(excelUrl);
-                const text = await res.text();
-                const rows = text.split('\n').slice(1);
-                const layers = { "B2":[], "1F":[], "5F":[] };
+                const response = await fetch(excelUrl);
+                const csvData = await response.text();
+                // 쉼표로 분리하되 따옴표 안의 쉼표는 무시하는 정규식 사용
+                const rows = csvData.split(/\r?\n/).slice(1);
+                const layers = { "B2": [], "1F": [], "5F": [] };
 
                 rows.forEach(row => {
-                    const cols = row.split(',').map(c => c.trim().replace(/"/g, ''));
-                    if(cols.length < 5) return;
+                    const columns = row.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
+                    if (!columns || columns.length < 5) return;
+
+                    const [floor, space, name, start, end, img] = columns.map(c => c.trim().replace(/"/g, ''));
+                    const startDate = new Date(start);
+                    const endDate = new Date(end);
                     
-                    const [floor, space, name, start, end, img] = cols;
-                    const today = new Date(); today.setHours(0,0,0,0);
-                    const sDate = new Date(start);
-                    const eDate = new Date(end);
+                    let status = "종료됨", dDay = "ENDED", tagClass = "tag-ended";
+                    if (now < startDate) {
+                        status = "오픈 예정"; tagClass = "tag-upcoming";
+                        dDay = `D-${Math.ceil((startDate - now) / 86400000)}`;
+                    } else if (now <= endDate) {
+                        status = "진행 중"; tagClass = "tag-live";
+                        const diff = Math.ceil((endDate - now) / 86400000);
+                        dDay = diff === 0 ? "TODAY END" : `${diff}일 남음`;
+                    }
 
-                    let status = "종료됨";
-                    if (today < sDate) status = "오픈 예정";
-                    else if (today <= eDate) status = "진행 중";
-
-                    if(layers[floor]) layers[floor].push({ space, name, period: `${start}~${end}`, status, img });
+                    if (layers[floor]) {
+                        layers[floor].push({ space, name, period: `${start}~${end}`, status, dDay, tagClass, img });
+                    }
                 });
-
                 render(layers);
             } catch (e) {
-                document.getElementById('loading').innerHTML = "데이터 연결 실패<br><span class='text-xs'>엑셀 열 순서: 층,공간,이름,시작일,종료일,이미지</span>";
+                document.getElementById('loading').innerText = "데이터 연결 실패. 공유 설정을 확인하세요.";
             }
         }
 
         function render(layers) {
             const app = document.getElementById('app'); app.innerHTML = '';
             Object.keys(layers).forEach(floor => {
-                if(layers[floor].length === 0) return;
-                const sec = document.createElement('section');
-                sec.id = floor;
-                sec.innerHTML = `<h2 class="text-3xl font-black mb-4 px-2">${floor}</h2>
+                if (layers[floor].length === 0) return;
+                const section = document.createElement('section');
+                section.id = floor;
+                section.className = "scroll-mt-24";
+                section.innerHTML = `
+                    <h2 class="text-4xl font-black mb-4 px-2 tracking-tighter">${floor}</h2>
                     <div class="carousel px-2">
                         ${layers[floor].map(item => `
-                            <div class="card border border-gray-100">
-                                <img src="${item.img || 'https://via.placeholder.com/400x500'}" class="w-full h-80 object-cover">
-                                <div class="p-4">
-                                    <span
+                            <div class="card bg-white rounded-[2rem] border border-gray-100 overflow-hidden shadow-sm">
+                                <div class="relative h-[400px] bg-gray-200">
+                                    <img src="${item.img || ''}" class="w-full h-full object-cover" onerror="this.src='https://via.placeholder.com/400x600?text=The+Hyundai'">
+                                    <div class="absolute top-4 left-4 flex flex-col gap-2">
+                                        <span class="${item.tagClass}">${item.status}</span>
+                                        <span class="bg-white/90 px-2 py-1 rounded text-[10px] font-black shadow-sm">${item.dDay}</span>
+                                    </div>
+                                </div>
+                                <div class="p-5">
+                                    <h3 class="font-bold text-xl mb-1 text-gray-800 leading-tight">${item.name}</h3>
+                                    <p class="text-gray-400 text-[11px] font-bold uppercase tracking-tight">${item.space} | ${item.period}</p>
+                                </div>
+                            </div>
+                        `).join('')}
+                    </div>`;
+                app.appendChild(section);
+            });
+        }
+        init();
+    </script>
+</body>
+</html>
